--- a/package.json
+++ b/package.json
@@ -14,8 +14,19 @@
   "dependencies": {
     "@capacitor/android": "^6.1.2",
     "@capacitor/app": "^6.0.1",
+    "@capacitor/browser": "^6.0.4",
     "@capacitor/cli": "^6.1.2",
     "@capacitor/core": "^6.1.2",
+    "@capacitor/ios": "^6.1.2",
+    "@capacitor/network": "^6.0.3",
+    "@capacitor/preferences": "^6.0.3",
+    "@capacitor/push-notifications": "^6.0.3",
+    "@capacitor/status-bar": "^6.0.1",
+    "capacitor-plugin-safe-area": "^3.0.4",
+    "sms-retriever": "^0.2.9",
     "vite": "^5.4.10"
+  },
+  "devDependencies": {
+    "typescript": "^5.6.3"
   }
 }
